syntax = "proto3";

package card_service;

option go_package = "card_service/generated";

import "google/protobuf/timestamp.proto";

service CardService {
  // Operations with users
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // Operations with cards
  rpc GetCard(GetCardRequest) returns (Card);
  rpc CreateCard(CreateCardRequest) returns (Card);
  rpc DeleteCard(DeleteCardRequest) returns (DeleteCardResponse);

  // Operations with transactions
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  rpc CreateTransaction(CreateTransactionRequest) returns (Transaction);

}

// Card operator directory
message CardOperator {
  int32 id = 1;
  string name = 2;
  string code = 3;
}

// User model
message User {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string birth_date = 6;
  google.protobuf.Timestamp created_at = 7;
}

// Bank card model
message Card {
  int32 id = 1;
  int32 user_id = 2;
  string card_number = 3;
  CardOperator operator = 4;
  string issue_date = 5;   // format: "YYYY-MM-DD"
  string expiry_date = 6;  // format: "YYYY-MM-DD"
  bool is_active = 7;
  double balance = 8;
  google.protobuf.Timestamp created_at = 9;
}

// Transaction model
message Transaction {
  int32 id = 1;
  int32 from_card_id = 2;
  int32 to_card_id = 3;
  double amount = 4;
  google.protobuf.Timestamp created_at = 5;
}

// Requests and responses for users
message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string birth_date = 5;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string birth_date = 6;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// Requests and responses for cards
message CreateCardRequest {
  int32 user_id = 1;
  string card_number = 2;
  int32 operator_id = 3;
  string issue_date = 4;
  string expiry_date = 5;
  double balance = 6;
}

message GetCardRequest {
  int32 id = 1;
}

message DeleteCardRequest {
  int32 id = 1;
}

message DeleteCardResponse {
  bool success = 1;
  string message = 2;
}

// Requests and responses for transactions
message CreateTransactionRequest {
  int32 from_card_id = 1;
  int32 to_card_id = 2;
  double amount = 3;
}

message GetTransactionRequest {
  int32 from_card_id = 1;
  int32 to_card_id = 2;
}

message GetTransactionResponse {
  repeated Transaction transactions = 1;
}